# astroprop

./: .gitignore  LICENSE.md  README.md  abstract.cabal  stack.yaml
app/: Chain.hs  CombineChain.hs  CompareChain.hs  DumpChain.hs  ExtractAPOD.hs  GetAPOD.hs  GetProposals.hs  Gibberish.hs  InfoChain.hs  MakeChain.hs  RunChain.hs
lib/: Chain.hs
