name:           abstract
Version:        0.0.0.3
Stability:      experimental
License:        PublicDomain
Author:         Douglas Burke (dburke.gw@gmail.com)
Maintainer:     dburke.gw@gmail.com
Category:       Tools
Synopsis:       What can we do with proposal abstracts?
Description:
  Grab successful proposal abstracts from the NASA ADS
  and then do unspeakable Markov experiments with them.
  .
  Currently powers https://twitter.com/astroprop

Tested-With:    GHC==7.8.4
Cabal-Version:  >= 1.8
Build-Type:     Simple

Source-repository head
  type:      git
  location:  https://github.com/DougBurke/astroprop.git

Library
  Hs-Source-Dirs:   lib/
  Exposed-Modules:  Chain
  Build-Depends:
    base
    , bytestring == 0.10.*
    , cereal == 0.4.*
    , hashable == 1.2.*
    , MonadRandom == 0.3.*
    , syb == 0.4.*
    , text == 1.2.*
    -- can probably go back further than this for time
    , time >= 1.2 && < 1.5
    , unordered-containers == 0.2.*

  ghc-options: -Wall

Executable getproposals    
  Hs-Source-Dirs: app/
  Main-Is:     GetProposals.hs

  ghc-options: -Wall

  Build-Depends:
    aeson == 0.8.*
    , base
    , bytestring == 0.10.*
    , directory == 1.2.*
    , filepath == 1.3.*
    , mtl >= 2.1 && < 2.3
    , optparse-applicative == 0.11.*
    , pipes == 4.1.*
    , pipes-attoparsec == 0.5.*
    , pipes-http == 1.0.*
    , strict == 0.3.*
    , text == 1.2.*

Executable gibberish
  Hs-Source-Dirs: app/
  Main-Is:     Gibberish.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , Glob == 0.7.*
    , MonadRandom == 0.3.*
    , optparse-applicative == 0.11.*
    , random == 1.1.*
    , text == 1.2.*

Executable makechain
  Hs-Source-Dirs: app/
  Main-Is:     MakeChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , Glob == 0.7.*
    , optparse-applicative == 0.11.*
    , text == 1.2.*

Executable runchain
  Hs-Source-Dirs: app/
  Main-Is:     RunChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , MonadRandom == 0.3.*
    , optparse-applicative == 0.11.*
    , random == 1.1.*
    , text == 1.2.*

