name:           abstract
Version:        0.0.0.4
Stability:      experimental
License:        PublicDomain
Author:         Douglas Burke (dburke.gw@gmail.com)
Maintainer:     dburke.gw@gmail.com
Category:       Tools
Synopsis:       What can we do with proposal abstracts?
Description:
  Grab successful proposal abstracts from the NASA ADS
  and then do unspeakable Markov experiments with them.
  .
  Currently powers https://twitter.com/astroprop

Tested-With:    GHC==7.8.4
Cabal-Version:  >= 1.8
Build-Type:     Simple

Source-repository head
  type:      git
  location:  https://github.com/DougBurke/astroprop.git

Library
  Hs-Source-Dirs:   lib/
  Exposed-Modules:  Chain

  Build-Depends:
    base
    , bytestring == 0.10.*
    , cereal == 0.4.*
    , containers == 0.5.*
    , hashable == 1.2.*
    , MonadRandom == 0.3.*
    , random == 1.1.*
    -- can definitely relax the semigroups constraint
    , semigroups == 0.16.*
    , syb == 0.4.*
    , text == 1.2.*
    -- can probably go back further than this for time
    , time >= 1.2 && < 1.5
    , unordered-containers == 0.2.*

  ghc-options: -Wall -fno-warn-orphans

Executable getproposals    
  Hs-Source-Dirs: app/
  Main-Is:     GetProposals.hs

  ghc-options: -Wall

  Build-Depends:
    aeson == 0.8.*
    , base
    , bytestring
    , directory == 1.2.*
    , filepath == 1.3.*
    , mtl >= 2.1 && < 2.3
    , optparse-applicative == 0.11.*
    , pipes == 4.1.*
    , pipes-attoparsec == 0.5.*
    , pipes-http == 1.0.*
    , strict == 0.3.*
    , text == 1.2.*

Executable getapod
  Hs-Source-Dirs: app/
  Main-Is:     GetAPOD.hs

  ghc-options: -Wall

  Build-Depends:
    base
    , bytestring
    , directory == 1.2.*
    , filepath == 1.3.*
    , optparse-applicative == 0.11.*
    , pipes == 4.1.*
    , pipes-bytestring == 2.1.*
    , pipes-http == 1.0.*
    , strict == 0.3.*
    , tagsoup == 0.13.*

Executable extractapod
  Hs-Source-Dirs: app/
  Main-Is:     ExtractAPOD.hs

  ghc-options: -Wall

  Build-Depends:
    base
    , bytestring
    , filepath == 1.3.*
    , optparse-applicative == 0.11.*
    , tagsoup == 0.13.*
    , text

Executable gibberish
  Hs-Source-Dirs: app/
  Main-Is:     Gibberish.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , Glob == 0.7.*
    , optparse-applicative == 0.11.*
    , text

Executable makechain
  Hs-Source-Dirs: app/
  Main-Is:     MakeChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , Glob == 0.7.*
    , optparse-applicative == 0.11.*
    , text

Executable runchain
  Hs-Source-Dirs: app/
  Main-Is:     RunChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative == 0.11.*
    , text

Executable infochain
  Hs-Source-Dirs: app/
  Main-Is:     InfoChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative == 0.11.*

Executable dumpchain
  Hs-Source-Dirs: app/
  Main-Is:     DumpChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative == 0.11.*
    , semigroups
    , text
    , unordered-containers

Executable comparechain
  Hs-Source-Dirs: app/
  Main-Is:     CompareChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative == 0.11.*

Executable combinechain
  Hs-Source-Dirs: app/
  Main-Is:     CombineChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative == 0.11.*
    , semigroups

