name:           abstract
Version:        0.0.1.0
Stability:      experimental
License:        PublicDomain
Author:         Douglas Burke (dburke.gw@gmail.com)
Maintainer:     dburke.gw@gmail.com
Category:       Tools
Synopsis:       What can we do with proposal abstracts?
Description:
  Grab successful proposal abstracts from the NASA ADS
  and then do unspeakable Markov experiments with them.
  .
  Currently powers https://twitter.com/astroprop

Tested-With:    GHC==8.0.2
Cabal-Version:  >= 1.8
Build-Type:     Simple

Source-repository head
  type:      git
  location:  https://github.com/DougBurke/astroprop.git

Library
  Hs-Source-Dirs:   lib/
  Exposed-Modules:  Chain

  Build-Depends:
    base
    , bytestring == 0.10.*
    , cereal == 0.5.*
    , containers == 0.5.*
    , hashable == 1.2.*
    , MonadRandom == 0.5.*
    , random == 1.1.*
    -- can definitely relax the semigroups constraint
    , semigroups == 0.18.*
    , syb == 0.6.*
    , text == 1.2.*
    -- can probably go back further than this for time
    , time >= 1.2 && < 1.7
    , unordered-containers == 0.2.*

  ghc-options: -Wall -fno-warn-orphans

Executable getproposals    
  Hs-Source-Dirs: app/
  Main-Is:     GetProposals.hs

  ghc-options: -Wall

  Build-Depends:
    aeson == 1.0.*
    , base
    , bytestring
    , directory >= 1.2 && < 1.4
    , filepath >= 1.3 && < 1.5
    , http-client-tls == 0.3.*
    , mtl >= 2.1 && < 2.3
    , optparse-applicative == 0.13.*
    , pipes == 4.3.*
    , pipes-attoparsec == 0.5.*
    , pipes-http == 1.0.*
    , strict == 0.3.*
    , text

Executable getapod
  Hs-Source-Dirs: app/
  Main-Is:     GetAPOD.hs

  ghc-options: -Wall

  Build-Depends:
    base
    , bytestring
    , directory
    , filepath
    , optparse-applicative
    , pipes
    , pipes-bytestring == 2.1.*
    , pipes-http
    , strict
    , tagsoup == 0.14.*

Executable extractapod
  Hs-Source-Dirs: app/
  Main-Is:     ExtractAPOD.hs

  ghc-options: -Wall

  Build-Depends:
    base
    , bytestring
    , filepath
    , optparse-applicative
    , tagsoup
    , text

Executable gibberish
  Hs-Source-Dirs: app/
  Main-Is:     Gibberish.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , Glob == 0.7.*
    , optparse-applicative
    , text

Executable makechain
  Hs-Source-Dirs: app/
  Main-Is:     MakeChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , Glob
    , optparse-applicative
    , text

Executable runchain
  Hs-Source-Dirs: app/
  Main-Is:     RunChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative
    , text

Executable infochain
  Hs-Source-Dirs: app/
  Main-Is:     InfoChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative

Executable dumpchain
  Hs-Source-Dirs: app/
  Main-Is:     DumpChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative
    , semigroups
    , text
    , unordered-containers

Executable comparechain
  Hs-Source-Dirs: app/
  Main-Is:     CompareChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative

Executable combinechain
  Hs-Source-Dirs: app/
  Main-Is:     CombineChain.hs

  ghc-options: -Wall

  Build-Depends:
    abstract
    , base
    , optparse-applicative
    , semigroups

